Added telegram interaction